--- a/VulkanPlayground/CMakeLists.txt
+++ b/VulkanPlayground/CMakeLists.txt
@@ -18,11 +18,13 @@ find_package(Vulkan REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(Stb REQUIRED)
+find_package(tinyobjloader CONFIG REQUIRED)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
         Vulkan::Vulkan
         glfw
-        glm::glm-header-only)
+        glm::glm-header-only
+        tinyobjloader::tinyobjloader)
 
 set(build_out_dir "$<TARGET_FILE_DIR:${PROJECT_NAME}>")
 set(shader_src_dir "${CMAKE_SOURCE_DIR}/shaders")
